fix(SectionNotification): Added missing margin in RTL

--- a/packages/wix-ui-tpa/src/components/SectionNotification/SectionNotification.st.css
+++ b/packages/wix-ui-tpa/src/components/SectionNotification/SectionNotification.st.css
@@ -39,7 +39,7 @@
 }
 
 .root {
-    -st-states: error, alert;
+    -st-states: error, alert, rtl;
     width: 100%;
     height: 100%;
     display: flex;
@@ -86,6 +86,10 @@
 
 .icon {
     transform: translateX(calc(-1 * (value(ContentPadding) / 2)));
+}
+
+.root:rtl .icon {
+    transform: translateX(calc((value(ContentPadding) / 2)));
 }
 
 .icon svg {
